# inventory-privacy

./: .gitignore  Cargo.toml  README.md  justfile  mprocs.yaml  package-lock.json  package.json
.claude/commands/: commit.md
crates/anemoi/: Cargo.toml  README.md
crates/circuits/: Cargo.toml
crates/circuits/src/: capacity_smt.rs  commitment.rs  deposit.rs  inventory.rs  item_exists.rs  item_exists_smt.rs  lib.rs  optimization_bench.rs  range_check.rs  signal.rs  smt_commitment.rs  state_transition.rs  tests.rs  transfer.rs  withdraw.rs
crates/proof-server/: Cargo.toml
crates/proof-server/src/: handlers.rs  main.rs  routes.rs
crates/prover/: Cargo.toml
crates/prover/src/: lib.rs  prove.rs  setup.rs  verify.rs
crates/r1cs-optimizer/: Cargo.toml  README.md
crates/r1cs-optimizer/examples/: optimize_circuits.rs
crates/r1cs-optimizer/src/: constraint.rs  lib.rs  optimizer.rs  reduction.rs
crates/r1cs-optimizer/src/passes/: common_subexpression.rs  constant_folding.rs  dead_variable.rs  deduplication.rs  linear_substitution.rs  mod.rs
crates/r1cs-optimizer/tests/: integration.rs  validation.rs
docs/: 15-private-inventory-system.md  26-smart-inventory-privacy.md  27-smart-inventory-no-merkle.md  28-smart-inventory-performance.md  29-multiple-vs-single-circuit.md  30-inventory-privacy-poc-design.md  31-volume-based-inventory.md
docs/circuits/: README.md  capacity.md  gadgets.md  item_exists.md  state_transition.md
scripts/: deploy-all.mjs  deploy-local.sh  deploy_contracts.ps1  deploy_contracts.sh  e2e-test.sh  fund_address.ps1  fund_address.sh  run-e2e-test.ps1  setup.sh  start-local-sui.sh  start_sui.ps1  start_sui.sh  test.sh
web/: index.html
web/public/: deployment.json
web/src/api/: client.ts
web/src/components/: Layout.tsx
web/src/pages/: DepositWithdraw.tsx  Explorer.tsx  Home.tsx  ProveOwnership.tsx  Transfer.tsx
(+9 files in other folders)
