[package]
name = "r1cs-optimizer"
version = "0.1.0"
edition = "2021"
description = "R1CS constraint system optimizer - detect and reduce redundant constraints"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthropics/r1cs-optimizer"
keywords = ["zkp", "r1cs", "groth16", "arkworks", "optimization"]
categories = ["cryptography", "development-tools"]

[[bin]]
name = "r1cs-optimize"
path = "src/bin/optimize.rs"

[dependencies]
ark-ff = "0.4"
ark-relations = "0.4"
ark-std = "0.4"
ark-serialize = "0.4"
thiserror = "1.0"
indexmap = "2.0"

[dev-dependencies]
ark-bn254 = "0.4"
ark-r1cs-std = "0.4"
inventory-circuits = { path = "../circuits" }

[features]
default = []
parallel = ["ark-ff/parallel", "ark-std/parallel"]
